# riptide_controllers

./: CMakeLists.txt  package.xml  riptide_broadcasters.xml  riptide_controllers.xml  riptide_lionel.xml  riptide_testers.xml
include/riptide_controllers/: actuators_reset.hpp  control_surface.hpp  depth_controller.hpp  dolphin_controller.hpp  full_riptide_controller.hpp  immersion_controller.hpp  log_controller.hpp  riptide_actuators_tester.hpp  riptide_battery_card_tester.hpp  riptide_controller.hpp  riptide_dispatcher.hpp  riptide_echosounder.hpp  riptide_echosounder_tester.hpp  riptide_imu_tester.hpp  riptide_pressure_tester.hpp  state_estimator.hpp
include/riptide_controllers/broadcasters/: riptide_actuators_broadcaster.hpp  riptide_battery_card_broadcaster.hpp  riptide_imu_broadcaster.hpp  riptide_pressure_broadcaster.hpp  riptide_tail_broadcaster.hpp
include/riptide_controllers/testers/: riptide_actuators_tester.hpp  riptide_battery_card_tester.hpp  riptide_echosounder_tester.hpp  riptide_imu_tester.hpp  riptide_pressure_tester.hpp
src/: actuators_reset.cpp  actuators_reset.yaml  control_surface.cpp  control_surface.yaml  depth_controller.cpp  depth_controller.yaml  dolphin_controller.cpp  dolphin_controller.yaml  full_riptide_controller.cpp  full_riptide_controller.yaml  immersion_controller.cpp  immersion_controller.yaml  log_controller.cpp  log_controller.yaml  riptide_actuators_tester.cpp  riptide_battery_card_tester.cpp  riptide_battery_card_tester.yaml  riptide_controller.cpp  riptide_controller.yaml  riptide_dispatcher.cpp  riptide_dispatcher.yaml  riptide_echosounder.cpp  riptide_echosounder.yaml  riptide_echosounder_tester.cpp  riptide_imu_tester.cpp  riptide_pressure_tester.cpp  riptide_pressure_tester.yaml  state_estimator.cpp  state_estimator.yaml
src/broadcasters/: riptide_actuators_broadcaster.cpp  riptide_actuators_broadcaster.yaml  riptide_battery_card_broadcaster.cpp  riptide_battery_card_broadcaster.yaml  riptide_imu_broadcaster.cpp  riptide_imu_broadcaster.yaml  riptide_pressure_broadcaster.cpp  riptide_pressure_broadcaster.yaml  riptide_tail_broadcaster.cpp  riptide_tail_broadcaster.yaml
src/depth/: depth_controller_reach.cpp
src/testers/: riptide_actuators_tester.cpp  riptide_actuators_tester.yaml  riptide_battery_card_tester.cpp  riptide_echosounder_tester.cpp  riptide_echosounder_tester.yaml  riptide_imu_tester.cpp  riptide_imu_tester.yaml  riptide_pressure_tester.cpp
